@@ -10,6 +10,7 @@
             FileCreateMode="0644"
             queue.type="LinkedList"
             queue.size="{{queue_size}}"
+            queue.dequeuebatchsize="{{dequeue_size}}"
             {%- if enable_retry %}
             action.ResumeRetryCount = "-1"
             {%- if enable_disk_assist %}
