@@ -13,6 +13,7 @@
             ZipLevel="{{zip_level}}"
             queue.type="LinkedList"
             queue.size="{{queue_size}}"
+            queue.dequeuebatchsize="{{dequeue_size}}"
             {%- if enable_retry %}
             action.ResumeRetryCount = "-1"
             {%- if enable_disk_assist %}
