@@ -9,6 +9,7 @@
             {% if ssl_key -%}TLS.MyPrivKey="{{ssl_key}}" {%- endif -%}
             queue.type="LinkedList"
             queue.size="{{queue_size}}"
+            queue.dequeuebatchsize="{{dequeue_size}}"
             {%- if enable_retry %}
             action.ResumeRetryCount = "-1"
             {%- if enable_disk_assist %}
