@@ -144,6 +144,17 @@
               <div class="row">
                 <div class="col-md-12">
                   <div class="form-group">
+                    <label class="col-sm-4 control-label">{{form.dequeue_size.label}}</label>
+                    <div class="col-sm-5">
+                      {{form.dequeue_size}}
+                      {{form.dequeue_size.errors|safe}}
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="form-group">
                     <label class="col-sm-4 control-label">{{form.enable_retry.label}}</label>
                     <div class="col-sm-5">
                       {{form.enable_retry}}
@@ -211,40 +222,6 @@
                   </div>
                 </div> <!-- /.tab-disk -->
               </div> <!-- /.tab-queue -->
-              <!-- Advanced tab -->
-              <div class="row">
-                <div class="col-sm-4 pull-right">
-                  <div class="form-group">
-                    <button class="btn btn-box-tool" type="button" data-toggle="collapse" data-target=".advanced_options">
-                      <i class="fa fa-plus"></i> {% trans "Advanced" %}
-                    </button>
-                  </div>
-                </div>
-              </div>
-              <div class="collapse advanced_options">
-                <div class="row">
-                  <div class="col-md-12">
-                    <div class="form-group">
-                      <label class="col-sm-4 control-label">{% trans "Rate-limiting interval (advanced)" %}</label>
-                      <div class="col-sm-5">
-                        {{form.ratelimit_interval}}
-                        {{form.ratelimit_interval.errors|safe}}
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-12">
-                    <div class="form-group">
-                      <label class="col-sm-4 control-label">{% trans "Rate-limiting burst (advanced)" %}</label>
-                      <div class="col-sm-5">
-                        {{form.ratelimit_burst}}
-                        {{form.ratelimit_burst.errors|safe}}
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
             </div>
             <div class="panel-footer">
               <a type="button" href="{% url 'applications.logfwd.list' %}" class="btn btn-flat btn-default">{% trans "Cancel" %}</a>
