@@ -144,6 +144,17 @@
               <div class="row">
                 <div class="col-md-12">
                   <div class="form-group">
+                    <label class="col-sm-4 control-label">{{form.dequeue_size.label}}</label>
+                    <div class="col-sm-5">
+                      {{form.dequeue_size}}
+                      {{form.dequeue_size.errors|safe}}
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="form-group">
                     <label class="col-sm-4 control-label">{{form.enable_retry.label}}</label>
                     <div class="col-sm-5">
                       {{form.enable_retry}}
