@@ -5,6 +5,8 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
 ## [Unreleased]
+### Removed
+- [LOG_FORWARDER] [ELASTICSEARCH] RateLimit settings
 ### Added
 - [LOG_FORWARDER] Disk-assisted queues for reliability
 
